# Coding-AI-Assistant

./: .gitignore  MCP-OLLAMA-5DAY-REPORT.md  MCP-OLLAMA-DOCUMENTATION.txt  README-MCP-INTEGRATION.md  direct-test.js  mcp-config.json  package-lock.json  package.json  pnpm-lock.yaml  simple-test.js  start-mcp.sh  test-mcp-client.js  test_error.js  test_mcp.js  test_mcp.py  tsconfig.base.json
mcp-ollama/: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  FINAL_FIXES.md  FIXES_APPLIED.md  INSTALLATION_COMPLETE.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SECURITY_FIXES.md  TEST_RESULTS.md  generate-certs.sh  install.sh  package-lock.json  package.json  test-all-components.js  test-comprehensive.js  test-dynamic-config.js  test-environment-config.js  test-functionality.js  test-results-summary.md  test-tools.js  tsconfig.json
mcp-ollama/cache/: cache.db
mcp-ollama/certs/: cert.pem  key.pem
mcp-ollama/src/: index.ts
mcp-ollama/src/analytics/: PerformanceTracker.ts
mcp-ollama/vscode-extension/: INSTALLATION.md  QUICK_TEST.md  README.md  mcp-ollama-assistant-1.0.0.vsix  package-lock.json  package.json  smartcode-aiassist-1.0.10.vsix  smartcode-aiassist-1.0.7.vsix  smartcode-aiassist-1.0.9.vsix  smartcode-aiassist.vsix  test.js  tsconfig.json
scripts/: dev.sh
tools/mcp-servers/: Dockerfile  pyproject.toml
tools/mcp-servers/aiassist_mcp/: __init__.py  server.py  server.py.backup
tools/mcp-servers/aiassist_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/mcp-servers/aiassist_mcp/tools/: fs.py  fs_write.py  shell.py  test.py
(+22 files in other folders)
